CoreConcepts/Ingress/be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo
        args:
          - "-text=Hello from Backend"
        ports:
        - containerPort: 5678
