CoreConcepts/Ingress/fe-deploment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx  # Example frontend
        ports:
        - containerPort: 80
