CoreConcepts/Ingress/be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: network
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
  type: ClusterIP
